--- a/src/components/vendorGrid/VendorGrid.sass
+++ b/src/components/vendorGrid/VendorGrid.sass
@@ -2,6 +2,7 @@
 
 $headline-font: 'EB Garamond', serif
 $paragraph-font: 'PT Mono', monospace
+$mobile: 400px
 
 .vendorCard
     margin: 4rem 4rem
@@ -22,6 +23,7 @@ $paragraph-font: 'PT Mono', monospace
     &__cat
         font-family: $paragraph-font
         margin-bottom: 1rem
+    @media screen and ( max-width: $mobile )
     
 .vendorImage
     &__card
