--- a/src/pages/policy/Policy.sass
+++ b/src/pages/policy/Policy.sass
@@ -2,8 +2,8 @@
 
 $headline-font: 'EB Garamond', serif
 $paragraph-font: 'PT Mono', monospace
+$mobile: 400px
 
-//Policy Page
 .policy
     padding: 10rem 4rem 1rem 4rem
     position: relative
@@ -19,3 +19,14 @@ $paragraph-font: 'PT Mono', monospace
         font-size: .9rem
         margin-bottom: 2rem
         line-height: 1.5rem
+    @media screen and ( max-width: $mobile )
+        padding: 5em 2em
+        &__headline
+            font-size: 3em
+            margin-bottom: 1em
+        &__text
+            width: 100%
+            margin-bottom: 1.5em
+            font-size: .9em
+            line-height: 1.2em
+        
