--- a/src/components/footer/Footer.sass
+++ b/src/components/footer/Footer.sass
@@ -17,6 +17,8 @@ $mobile: 400px
     visibility: hidden
     opacity: 0
     will-change: auto
+    @media screen and ( max-width: $mobile )
+        display: none
 
 .formContainer
     width: 70vw
