--- a/src/components/navbar/Navbar.sass
+++ b/src/components/navbar/Navbar.sass
@@ -138,6 +138,7 @@ $mobile: 400px
         width: 3em
         height: 2em
         z-index: 4
+        cursor: pointer
         &__slice
             display: block
             position: absolute
