--- a/src/pages/community/Community.sass
+++ b/src/pages/community/Community.sass
@@ -2,7 +2,9 @@
 
 $headline-font: 'EB Garamond', serif
 $paragraph-font: 'PT Mono', monospace
+$mobile: 400px
 
+//Communtiy page
 .communityEvents
     margin: 7rem 4rem
     &__anchor
@@ -15,7 +17,7 @@ $paragraph-font: 'PT Mono', monospace
         text-align: center
         text-decoration: none
         font-family: $paragraph-font
-        font-size: .9rem
+        font-size: 1rem
         color: black
         will-change: color, background-color 
         transition: color .4s, background-color .4s
@@ -24,6 +26,10 @@ $paragraph-font: 'PT Mono', monospace
         &:hover
             color: white
             background-color: black
+    @media screen and ( max-width: $mobile )
+        margin: 2em
+        &__anchor
+            padding: 1.5em 2em
 
 .events
     position: relative
@@ -50,12 +56,12 @@ $paragraph-font: 'PT Mono', monospace
         letter-spacing: 1px
         &:visited
             color: black
-    &__cardTop, &__cardBottom, &__cardBottomMid
+    &__cardTop, &__cardBottom, &__cardBottomMid, &__cardTopMid
         margin: 0 2rem
         display: grid
         place-content: center
         text-align: center
-    &__cardTop
+    &__cardTop, &__cardTopMid
         padding: 5rem 4rem
         background-image: repeating-linear-gradient(-74deg,rgba(0,0,0,.5),rgba(0,0,0,.5) 1px,transparent 0,transparent 8px)
         background-position: 0 0
@@ -72,6 +78,30 @@ $paragraph-font: 'PT Mono', monospace
         background-position: 0 100%
         background-repeat: repeat-x
         background-size: 100% 22px
+    @media screen and ( max-width: $mobile )
+        display: flex
+        flex-direction: column
+        text-align: center
+        &__cardBottomMid, &__cardTopMid
+            display: none
+        &__cardTop, &__cardBottom
+            margin: 0
+        &__cardTop
+            padding: 4em 2em
+        &__cardBottom
+            background-image: repeating-linear-gradient(-74deg,rgba(0,0,0,.5),rgba(0,0,0,.5) 1px,transparent 0,transparent 8px)
+            background-position: 0 0
+            background-repeat: repeat-x
+            background-size: 100% 22px
+        &__headline
+            margin-bottom: 1em
+            padding: 0
+            position: relative
+            font-size: 3em
+            line-height: 1em
+            top: 0
+            left: 0
+            transform: none
 
 .featuresBanner
     margin: 2rem 4rem
@@ -80,6 +110,10 @@ $paragraph-font: 'PT Mono', monospace
         margin-bottom: 2rem
         font-size: 7rem
         font-weight: 100
+    @media screen and ( max-width: $mobile )
+        margin: 2em
+        &__headline
+            font-size: 3em
 
 
 //community event page
@@ -124,6 +158,7 @@ $paragraph-font: 'PT Mono', monospace
         font-size: 7rem
         font-weight: 100
 
+//CommunityEvents
 .eventGrid
     margin: 4rem
     &__list
