added mobile design communtiy-page-event

--- a/src/components/image-slider/ImageSlider.sass
+++ b/src/components/image-slider/ImageSlider.sass
@@ -1,7 +1,14 @@
+$mobile: 400px
+    
 .imageSliderContainer
     margin: 4rem auto
     height: 50rem
     display: flex
+    @media screen and ( max-width: $mobile )
+        margin: 0
+        padding: 2em 0 6em 0
+        height: auto
+        position: relative
 
 .swiper
     width: 100%
@@ -31,12 +38,20 @@
         animation-play-state: running
     &:hover > .iconContainer
         transform: scale(1.2)
+    @media screen and ( max-width: $mobile )
+        position: absolute
+        bottom: 1.5em
+        width: 50%
+        height: 3em
 
 .button-slider-prev
     border-left: 1px solid black
     
 .button-slider-next
     border-right: 1px solid black
+    @media screen and ( max-width: $mobile )
+        border: 1px solid black
+        right: 0
 
 .iconContainer
     display: grid
