--- a/src/pages/home/Home.sass
+++ b/src/pages/home/Home.sass
@@ -36,6 +36,9 @@ $mobile: 400px
             width: 100%
             font-size: 2em
             line-height: 1.5em
+        &__anchor
+            padding-bottom: 8px
+            background-position: 0 105%
 
 .bgContainer
     height: 100vh
