--- a/src/components/features/Features.sass
+++ b/src/components/features/Features.sass
@@ -2,7 +2,7 @@
 
 $headline-font: 'EB Garamond', serif
 $mobile: 400px
-    
+
 .features
     margin-bottom: 8rem
     display: grid
@@ -40,8 +40,15 @@ $mobile: 400px
         &__card
             height: 15em
         &__imageHeadline
+            padding: .05em 0
+            border-left: 5px solid white
+            max-width: 280px
             font-size: 1em
-            border-left: none
             bottom: -1.5em
         &__headlineSpan
-            padding: .5em
+            padding: .15em
+            border-right: 5px solid white
+            line-height: 1.5em
+
+
+
