--- a/src/components/footer/Footer.sass
+++ b/src/components/footer/Footer.sass
@@ -17,8 +17,6 @@ $mobile: 400px
     visibility: hidden
     opacity: 0
     will-change: auto
-    @media screen and ( max-width: $mobile )
-        display: none
 
 .formContainer
     width: 70vw
@@ -39,9 +37,18 @@ $mobile: 400px
         position: absolute
         top: 3rem
         right: 15rem
-        z-index: 4
+        z-index: 5
         transform: translate(20rem, 0)
         will-change: auto
+    @media screen and ( max-width: $mobile )
+        margin: 0
+        width: 100%
+        min-height: 100vh
+        &__close
+            width: 3em
+            height: 3em
+            top: 2em
+            right: 2em
 
 .footerBanner
     margin: 3rem 4rem
