--- a/src/components/vendor-form/VendorForm.sass
+++ b/src/components/vendor-form/VendorForm.sass
@@ -2,7 +2,7 @@
 
 $headline-font: 'EB Garamond', serif
 $paragraph-font: 'PT Mono', monospace
-    
+$mobile: 400px
 $listIconSize: 100%
 
 .vendorForm
@@ -58,6 +58,7 @@ $listIconSize: 100%
                         background: url("/src/assets/icons/vendor-form/bx-group.svg") no-repeat
                         background-size: $listIconSize
         &:nth-child(2)
+            flex-direction: row-reverse
             .vendorForm__item
                 &:nth-child(1)
                     &::before
@@ -93,8 +94,6 @@ $listIconSize: 100%
                     &::before
                         background: url("/src/assets/icons/vendor-form/bxs-direction-right.svg") no-repeat
                         background-size: $listIconSize
-        &:nth-child(2)
-            flex-direction: row-reverse
     &__cardText
         display: flex
         flex-direction: column
@@ -124,7 +123,33 @@ $listIconSize: 100%
             display: inline-block
             height: 20px
             width: 20px
-
+    @media screen and ( max-width: $mobile )
+        padding: 2em
+        width: 100%
+        height: auto
+        &__headline
+            width: 100%
+            font-size: 3em
+        &__card
+            flex-direction: column
+            height: auto
+            &:nth-child(2)
+                flex-direction: column
+        &__listHeadline
+            font-size: 2em
+        &__imageContainer
+            margin-bottom: 1em
+            width: 100%
+            height: 15em
+        &__cardText
+            width: 100%
+            padding: 0
+        &__list
+            margin-bottom: 2em
+            padding: .5em
+        &__item
+            margin: 1em
+            font-size: .8em
 .form
     margin-top: 2rem
     &__row
@@ -148,6 +173,13 @@ $listIconSize: 100%
         font-family: $paragraph-font
         font-size: .8rem
         color: red
+    &__submitText
+        display: none
+        margin-top: 1rem
+        color: green
+        font-family: $paragraph-font
+        font-size: .9rem
+        text-align: center
     &__submitButton
         width: 100%
         margin: 2rem 0
@@ -165,6 +197,11 @@ $listIconSize: 100%
         &:hover
             background-color: white
             color: black
+    @media screen and ( max-width: $mobile )
+        &__row
+            flex-direction: column
+        &__input, &__select, &__textarea
+            padding: 1.5em
 
         
 
